Put the name of the project in the h1 element and listed the login using li element

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -18,7 +18,7 @@
         </ul>
     </div>
     
-        <h2 class="h2">Parking Availability</h2>
+        <!-- <h2 class="h2">Parking Availability</h2>
     <div>
         <ul id="park-name">
         </ul>
