created a  div for the parkname details

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </ul>
     </div>
     
-        <!-- <h2 class="h2">Parking Availability</h2>
+        <h2 class="h2">Parking Availability</h2>
     <div>
         <ul id="park-name">
         </ul>
@@ -39,4 +39,4 @@
     <script src="index.js"></script>
 </body>
 
-</html> -->
+</html>
