--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <p>fee: <span id="parking fee">10</span></p>
         <p>Opening hours: <span id="Opening-hours">9:00am-5:00pm</span></p>
     <div class="button">
-        <button>BOOK NO</button>
+        <button>BOOK NOW</button>
     </div>    
     </div>
 
