fetched the json file

--- a/index.html
+++ b/index.html
@@ -9,14 +9,27 @@
 </head>
 <body> 
     <div id="header">
-      <h1 id="h1">SMART PARKING MANAGEMENT SYSTEM</h1>
+      <h1 id="h1">Welcome to smart parking management system</h1>
 
       <div>
         <ul>
-        <li>HOME</li>
-        <li>ABOUT</li>
-        <li>REGISTER</li>
-        <li>LOG IN</li>
+           <li class="dropdown">
+             <button class="dropbtn">HOME</button>
+             <div class="dropdown-content">
+                <a href="#">available spaces</a>
+                <a href="#">parking details</a>
+                <a href="#">parking time</a>
+             </div>
+          </li>
+          <li>
+            <button id="about">ABOUT </button>
+          </li>
+          <li> 
+            <button id="register">REGISTER </button>
+          </li>
+          <li>
+            <button id="login">LOGIN</button>
+          </li>
         </ul>
        </div>
     </div>
